<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameOfLife</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_helptext_conway"><![CDATA[<p>John Horton Conway is a British <b>mathematician</b> born 26 December 1937 extremely active in finite groups, knot theory, combinatorial game theory and coding theory.</p><p></p>He devised his famous <b>Game Of Life</b> in 1970. It\'s a zero-player game with a grid world computing its evolution step by step according to some simple rules.<p>A cell could be either empty (dead) or full (alive). At each step in time, the following transitions occur :</p><ul><li>Any live cell with fewer than two live neighbours dies, as if caused by under-population.</li><li>Any live cell with two or three live neighbours lives on to the next generation.</li><li>Any live cell with more than three live neighbours dies, as if by overcrowding.</li><li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li></ul><p>The initial pattern constitutes the seed of the system. The first generation is created by applying the above rules simultaneously to every cell in the seed—births and deaths occur simultaneously, and the discrete moment at which this happens is sometimes called a tick (in other words, each generation is a pure function of the preceding one). The rules continue to be applied repeatedly to create further generations.</p>]]></string>
    
    <string name="button_apply">Apply</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_start">Start</string>
	<string name="button_pause">Pause</string>
    <string name="button_step">Step</string>
    <string name="button_reset">Reset</string>
    <string name="button_settings">Settings</string>

    <string name="main_seekbar_speed_label">Speed : </string>
    		
    <string name="setting_choice_conway">Conway rules</string>
    <string name="setting_choice_shelling">Shelling rules</string>
	<string name="setting_choice_epidemic">Epidemic rules</string>
    <string name="setting_choice_war">War rules</string>
    <string name="setting_help_conway">Help on Conway rules</string>
    <string name="setting_help_shelling">Help on Shelling rules</string>
	<string name="setting_help_epidemic">Help on Epidemic rules</string>
    <string name="setting_help_war">Help on War rules</string>
    <string name="nb_tiles">Nb tiles :</string>
    <string name="setting_help_excitable_media">TODO</string>
    <string name="setting_choice_excitable_media">Excitable Media</string>
    <string name="setting_help_boids">boids</string>
    <string name="setting_choice_boids">Boids rules</string>

</resources>
