<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/main_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.zmachsoft.gameoflife.SettingsActivity" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<ImageButton
			    android:id="@+id/setting_help_conway"
			    android:background="@null"
			    android:layout_width="wrap_content"
			    android:layout_height="34dp"
			    android:layout_gravity="center_vertical"
			    android:contentDescription="@string/setting_help_conway"
			    android:src="@drawable/help" />

			<CheckedTextView
			    android:id="@+id/checkedConway"
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:layout_marginLeft="20dp"
			    android:checkMark="?android:attr/listChoiceIndicatorSingle"
			    android:clickable="true"
			    android:gravity="left|center"
			    android:text="@string/setting_choice_conway" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<ImageButton
			    android:id="@+id/setting_help_shelling"
			    android:background="@null"
			    android:layout_width="wrap_content"
			    android:layout_height="34dp"
			    android:contentDescription="@string/setting_help_shelling"
			    android:src="@drawable/help" />

			<CheckedTextView
			    android:id="@+id/checkedShelling"
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:layout_marginLeft="20dp"
			    android:checkMark="?android:attr/listChoiceIndicatorSingle"
			    android:clickable="true"
			    android:gravity="left|center"
			    android:text="@string/setting_choice_shelling" />

		</LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <ImageButton
	            android:id="@+id/setting_help_epidemic"
	            android:background="@null"
	            android:layout_width="wrap_content"
	            android:layout_height="34dp"
			    android:contentDescription="@string/setting_help_epidemic"
	            android:src="@drawable/help" />

	        <CheckedTextView
	            android:id="@+id/checkedEpidemic"
	            android:layout_width="fill_parent"
	            android:layout_height="40dp"
	            android:layout_marginLeft="20dp"
	            android:checkMark="?android:attr/listChoiceIndicatorSingle"
	            android:clickable="true"
	            android:gravity="left|center"
	            android:text="@string/setting_choice_epidemic" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <ImageButton
	            android:id="@+id/setting_help_war"
	            android:background="@null"
	            android:layout_width="wrap_content"
	            android:layout_height="34dp"
			    android:contentDescription="@string/setting_help_war"
	            android:src="@drawable/help" />

	        <CheckedTextView
	            android:id="@+id/checkedWar"
	            android:layout_width="fill_parent"
	            android:layout_height="40dp"
	            android:layout_marginLeft="20dp"
	            android:checkMark="?android:attr/listChoiceIndicatorSingle"
	            android:clickable="true"
	            android:gravity="left|center"
	            android:text="@string/setting_choice_war" />

	    </LinearLayout>

	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal" >

		<Button
		    android:id="@+id/settingsApply"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:minWidth="100dp"
		    android:text="@string/button_apply" />

		<Button
		    android:id="@+id/settingsCancel"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:minWidth="100dp"
		    android:text="@string/button_cancel" />

	</LinearLayout>

</RelativeLayout>